--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
 </head>
 
-<body>
-    <div id="links2">
+<body class="part2">
+    <header>
         <img src="img/lambda-black.png"/>
-    <nav>
+    <nav class="links2"></nav>
       <a href="#">Home</a>
       <a href="about.html">About</a>
       <a href="#">Products</a>
       <a href="#">Blog</a>
       <a href="#">Contact</a>
-    </nav>
-    </div>
+    </nav> 
+    </header>
     <div class="container">
         <img src="img/jumbo.jpg"/>
         <section class="top-content">
